[package]
name = "knative-queue-proxy-rust"
version = "0.1.0"
authors = ["Markus Thömmes <markusthoemmes@me.com>"]
edition = "2018"

[dependencies]
envconfig = "0.9"
futures-intrusive = "0.4"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }